--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@phosphor-icons/react": "^2.1.7",
     "@popperjs/core": "^2.11.8",
     "@ramonak/react-progress-bar": "^5.2.0",
+    "@reduxjs/toolkit": "^2.9.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -58,6 +59,7 @@
     "react-modal-video": "^2.0.2",
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.3.3",
+    "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "react-scroll-to-top": "^3.0.0",
     "react-select": "^5.10.2",
