--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "flatpickr": "^4.6.13",
     "highlight.js": "^11.10.0",
     "isotope-layout": "^3.0.6",
+    "jose": "^6.1.0",
     "jquery": "^3.7.1",
     "jsvectormap": "^1.6.0",
     "katex": "^0.16.11",
