--- a/.env
+++ b/.env
@@ -2,4 +2,7 @@ APP_NAME=HealApp
 APP_DESCRIPTION=HealApp is a health management application designed to help users track their health metrics, manage appointments, and access health resources.
 APP_VERSION=1.0.0
 APP_AUTHOR=HealApp Team 
-NEXT_PUBLIC_API_URL=http:/localhost:8080
+NEXT_PUBLIC_API_URL=http://localhost:8080
+
+
+JWT_SECRET=staging
