--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-slick": "^0.30.2",
     "react-slider": "^2.0.6",
     "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "use-debounce": "^10.0.5",
     "uuid": "^10.0.0",
